# sparx

./: Cargo.toml  HISTORY.md  NOTICE.md  PHASE_HISTORY.txt  README.md
benches/: tenant_device_eps.rs
contracts/: 01_semantic_keys_v0_1.md  02_shape_catalog_v0_1.md  03_alert_object_explanation_v0_1.md  04_state_retention_v0_1.md  05_feature_id_strategy_v0_1.md  06_rocksdb_topology_v0_1.md  07_cli_contract_v0_1.md  08_directory_discovery_v0_1.md  09_worker_partitioning_v0_1.md  10_metrics_health_v0_1.md  11_mvp_milestones_tests_v0_1.md  12_fixture_corpus_v0_1.md  13_overrides_tenant_policy_v0_1.md  14_schema_migrations_v0_1.md  15_alert_query_cli_v0_1.md  16_raw_log_drilldown_v0_1.md  17_format_handling_v0_1.md  18_syslog_envelope_and_cef_reverse_kv_v0_1.md  19_tokenization_boundary_v0_1.md  20_feature_weighting_v0_1.md  21_scoring_math_thresholding_v0_1.md  22_baseline_sketch_encoding_v0_1.md  23_tokenizer_details_v0_1.md  24_feature_emission_catalog_v0_1.md  25_tenant_db_key_prefix_map_v0_1.md  26_open_window_checkpoint_encoding_v0_1.md  27_alert_object_schema_v0_1.md  28_config_schema_v0_1.md  29_output_sink_contract_v0_1.md  30_global_db_key_prefix_map_v0_1.md  31_tenant_db_simple_value_encodings_v0_1.md  32_service_and_deployment_contract_v0_1.md  33_contract_consistency_checklist_v0_1.md  34_health_silence_detection_v0_1.md  35_expected_source_state_vdrop_plan_v0_1.md  36_vdrop_policy_diagnostics_scope_v0_1.md  37_sharp_drop_detection_scope_v0_1.md  38_vdrop_richer_subject_scope_v0_1.md  39_source_stream_vdrop_implementation_plan_v0_1.md  (+4 more)
docs/: ARCHITECTURE.md  (+22 more)
(+145 files in other folders)
