[package]
name = "sparx"
version = "0.0.0"
edition = "2021"
authors = ["Richard S. Westmoreland <dev@rswestmore.land>"]
description = "Sparse Matrix Log Analyzer for multi-tenant log analysis"
readme = "README.md"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "sparx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
blake3 = "1"
flate2 = "1"
zstd = "0.13"
crc32fast = "1"
chrono = "0.4"
serde_json = "1"
csv = "1"
postcard = { version = "1", features = ["use-std"] }
fjall = "=3.1.2"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
[[bench]]
name = "tenant_device_eps"
harness = false

